--- a/supercon2/templates/automatic_database.html
+++ b/supercon2/templates/automatic_database.html
@@ -149,6 +149,9 @@
                 },
                 lastFilteredItem() {
                     return this.filteredItems[this.filteredItems.length - 1]
+                },
+                firstFilteredItem() {
+                    return this.filteredItems[0]
                 }
             },
             mounted() {
@@ -181,24 +184,22 @@
                     if (event.srcElement.nodeName.indexOf('INPUT') > -1) {
                         return
                     }
-                    const ids = this.filteredItems.map(item => item.id)
-                    let rowNumber = this.selectedItems.length === 1 ? ids.indexOf(this.selectedItem.id) : -1
                     switch (event.key) {
                         case 'ArrowDown':
                             event.preventDefault()
-                            if (this.pageIsLast) {
-                                // If less than last page count, move to next column
-                                if (rowNumber < this.filteredItems.length - 1) {
-                                    this.selectedItems = [this.filteredItems[rowNumber + 1]]
-                                }
-                            } else {
-                                if (rowNumber < this.itemsPerPage - 1) {
-                                    this.selectedItems = [this.filteredItems[rowNumber + 1]]
-                                }
-                                if (rowNumber === this.itemsPerPage - 1) {
-                                    this.selectedItems = []
-                                    this.page++
-                                }
+                            switch (this.rowNumber) {
+                                case undefined:
+                                    this.selectedItems = [this.firstFilteredItem]
+                                    break
+                                // the row number is the last of the filtered items
+                                case this.filteredItems.length - 1:
+                                    if (!this.pageIsLast) {
+                                        this.page++
+                                        this.selectedItems = []
+                                    }
+                                    break
+                                default:
+                                    this.selectedItems = [this.filteredItems[this.rowNumber + 1]]
                             }
                             break
                         case 'ArrowUp':
