--- a/supercon2/templates/automatic_database.html
+++ b/supercon2/templates/automatic_database.html
@@ -199,6 +199,7 @@
                                     }
                                     break
                                 default:
+                                    // move to next row
                                     this.selectedItems = [this.filteredItems[this.rowNumber + 1]]
                             }
                             break
@@ -215,11 +216,13 @@
                                     }
                                     break
                                 default:
+                                    // move to previous row
                                     this.selectedItems = [this.filteredItems[this.rowNumber - 1]]
                             }
                             break
                         case 'Enter':
                             await this.toggleFlag(this.selectedItem)
+                            break
                         default:
                             break;
                     }
