--- a/supercon2/templates/automatic_database.html
+++ b/supercon2/templates/automatic_database.html
@@ -29,6 +29,61 @@
                             <v-text-field v-model="rawMaterialKeyword" type="text" label="keyword"
                                 v-if="header.value === 'rawMaterial'" hide-details>
                             </v-text-field>
+                            <v-text-field v-model="nameKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'name'" hide-details></v-text-field>
+                            <v-text-field v-model="formulaKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'formula'" hide-details></v-text-field>
+                            <v-text-field v-model="spaceGroupKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'spaceGroup'" hide-details></v-text-field>
+                            <v-text-field v-model="crystalStructureKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'crystalStructure'" hide-details></v-text-field>
+                            <v-text-field v-model="unitCellTypeKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'unitCellType'" hide-details></v-text-field>
+                            <v-text-field v-model="dopingKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'doping'" hide-details></v-text-field>
+                            <v-text-field v-model="shapeKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'shape'" hide-details></v-text-field>
+                            <v-text-field v-model="variablesKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'variables'" hide-details></v-text-field>
+                            <v-text-field v-model="materialClassKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'materialClass'" hide-details></v-text-field>
+                            <v-text-field v-model="fabricationKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'fabrication'" hide-details></v-text-field>
+                            <v-text-field v-model="substrateKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'substrate'" hide-details></v-text-field>
+                            <v-text-field v-model="criticalTemperatureKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'criticalTemperature'" hide-details></v-text-field>
+                            <v-text-field v-model="appliedPressureKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'appliedPressure'" hide-details></v-text-field>
+                            <v-text-field v-model="criticalTemperatureMeasurementMethodKeyword" type="text"
+                                label="keyword" v-else-if="header.value === 'criticalTemperatureMeasurementMethod'"
+                                hide-details></v-text-field>
+                            <v-text-field v-model="linkTypeKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'linkType'" hide-details></v-text-field>
+                            <v-text-field v-model="sectionKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'section'" hide-details></v-text-field>
+                            <v-text-field v-model="subsectionKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'subsection'" hide-details></v-text-field>
+                            <v-text-field v-model="pathKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'path'" hide-details></v-text-field>
+                            <v-text-field v-model="filenameKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'filename'" hide-details></v-text-field>
+                            <v-text-field v-model="hashKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'hash'" hide-details></v-text-field>
+                            <v-text-field v-model="timestampKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'timestamp'" hide-details></v-text-field>
+                            <v-text-field v-model="doiKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'doi'" hide-details></v-text-field>
+                            <v-text-field v-model="authorsKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'authors'" hide-details></v-text-field>
+                            <v-text-field v-model="titleKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'title'" hide-details></v-text-field>
+                            <v-text-field v-model="publisherKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'publisher'" hide-details></v-text-field>
+                            <v-text-field v-model="journalKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'journal'" hide-details></v-text-field>
+                            <v-text-field v-model="yearKeyword" type="text" label="keyword"
+                                v-else-if="header.value === 'year'" hide-details></v-text-field>
                             <v-radio-group v-model="typeRadioGroup" v-else-if="header.value === 'type'" dense
                                 hide-details :readonly="!expandFilter">
                                 <v-radio v-for="item in ['all', 'manual', 'automatic']" :key="item" :label="item"
@@ -78,45 +133,72 @@
                     filteredItems: [],
                     selectedHeaders: [],
                     rawMaterialKeyword: '',
+                    nameKeyword: '',
+                    formulaKeyword: '',
+                    spaceGroupKeyword: '',
+                    crystalStructureKeyword: '',
+                    unitCellTypeKeyword: '',
+                    dopingKeyword: '',
+                    shapeKeyword: '',
+                    variablesKeyword: '',
+                    materialClassKeyword: '',
+                    fabricationKeyword: '',
+                    substrateKeyword: '',
+                    criticalTemperatureKeyword: '',
+                    appliedPressureKeyword: '',
+                    criticalTemperatureMeasurementMethodKeyword: '',
+                    linkTypeKeyword: '',
+                    sectionKeyword: '',
+                    subsectionKeyword: '',
+                    pathKeyword: '',
+                    filenameKeyword: '',
+                    hashKeyword: '',
+                    timestampKeyword: '',
+                    doiKeyword: '',
+                    authorsKeyword: '',
+                    titleKeyword: '',
+                    publisherKeyword: '',
+                    journalKeyword: '',
+                    yearKeyword: '',
                     expandFilter: false,
                     typeRadioGroup: 'all',
                     statusRadioGroup: 'all',
                     flagRadioGroup: 'all',
                     headers: [
                         { text: 'Raw Material', value: 'rawMaterial', hidden: false, filter: this.rawMaterialFilter },
-                        { text: 'Name', value: 'name', hidden: false },
-                        { text: 'Formula', value: 'formula', hidden: false },
-                        { text: 'Space Group', value: 'spaceGroup', hidden: true },
+                        { text: 'Name', value: 'name', hidden: false, filter: this.nameFilter },
+                        { text: 'Formula', value: 'formula', hidden: false, filter: this.formulaFilter },
+                        { text: 'Space Group', value: 'spaceGroup', hidden: true, filter: this.spaceGroupFilter },
                         // { text: 'Space Group ID', value: 'spaceGroupId', hidden: true },
-                        { text: 'Crystal Structure', value: 'crystalStructure', hidden: true },
+                        { text: 'Crystal Structure', value: 'crystalStructure', hidden: true, filter: this.crystalStructureFilter },
                         // { text: 'Crystal Structure ID', value: 'crystalStructureId', hidden: true },
-                        { text: 'Unit Cell Type', value: 'unitCellType', hidden: true },
+                        { text: 'Unit Cell Type', value: 'unitCellType', hidden: true, filter: this.unitCellTypeFilter },
                         // { text: 'Unit Cell Type ID', value: 'unitCellTypeId', hidden: true },
-                        { text: 'Doping', value: 'doping', hidden: false },
-                        { text: 'Shape', value: 'shape', hidden: false },
-                        { text: 'Variables', value: 'variables', hidden: true },
-                        { text: 'Material Class', value: 'materialClass', hidden: false },
-                        { text: 'Fabrication', value: 'fabrication', hidden: true },
-                        { text: 'Substrate', value: 'substrate', hidden: true },
-                        { text: 'Critical Temperature', value: 'criticalTemperature', hidden: false },
+                        { text: 'Doping', value: 'doping', hidden: false, filter: this.dopingFilter },
+                        { text: 'Shape', value: 'shape', hidden: false, filter: this.shapeFilter },
+                        { text: 'Variables', value: 'variables', hidden: true, filter: this.variablesFilter },
+                        { text: 'Material Class', value: 'materialClass', hidden: false, filter: this.materialClassFilter },
+                        { text: 'Fabrication', value: 'fabrication', hidden: true, filter: this.fabricationFilter },
+                        { text: 'Substrate', value: 'substrate', hidden: true, filter: this.substrateFilter },
+                        { text: 'Critical Temperature', value: 'criticalTemperature', hidden: false, filter: this.criticalTemperatureFilter },
                         // { text: 'Critical TemperatureId', value: 'criticalTemperatureId', hidden: true },
-                        { text: 'Applied Pressure', value: 'appliedPressure', hidden: false },
+                        { text: 'Applied Pressure', value: 'appliedPressure', hidden: false, filter: this.appliedPressureFilter },
                         // { text: 'Applied Pressure ID', value: 'appliedPressureId', hidden: true },
-                        { text: 'Critical Temperature Measurement Method', value: 'criticalTemperatureMeasurementMethod', hidden: true },
+                        { text: 'Critical Temperature Measurement Method', value: 'criticalTemperatureMeasurementMethod', hidden: true, filter: this.criticalTemperatureMeasurementMethodFilter },
                         // { text: 'Critical Temperature Measurement MethodId', value: 'criticalTemperatureMeasurementMethodId', hidden: true },
-                        { text: 'Link Type', value: 'linkType', hidden: true },
-                        { text: 'Section', value: 'section', hidden: false },
-                        { text: 'Subsection', value: 'subsection', hidden: false },
-                        { text: 'Path', value: 'path', hidden: true },
-                        { text: 'Filename', value: 'filename', hidden: true },
-                        { text: 'Hash', value: 'hash', hidden: true },
-                        { text: 'Timestamp', value: 'timestamp', hidden: true },
-                        { text: 'DOI', value: 'doi', hidden: false },
-                        { text: 'Authors', value: 'authors', width: 300, hidden: false },
-                        { text: 'Title', value: 'title', width: 500, hidden: false },
-                        { text: 'Publisher', value: 'publisher', hidden: false },
-                        { text: 'Journal', value: 'journal', hidden: false },
-                        { text: 'Year', value: 'year', hidden: false },
+                        { text: 'Link Type', value: 'linkType', hidden: true, filter: this.linkTypeFilter },
+                        { text: 'Section', value: 'section', hidden: false, filter: this.sectionFilter },
+                        { text: 'Subsection', value: 'subsection', hidden: false, filter: this.subsectionFilter },
+                        { text: 'Path', value: 'path', hidden: true, filter: this.pathFilter },
+                        { text: 'Filename', value: 'filename', hidden: true, filter: this.filenameFilter },
+                        { text: 'Hash', value: 'hash', hidden: true, filter: this.hashFilter },
+                        { text: 'Timestamp', value: 'timestamp', hidden: true, filter: this.timestampFilter },
+                        { text: 'DOI', value: 'doi', hidden: false, filter: this.doiFilter },
+                        { text: 'Authors', value: 'authors', width: 300, hidden: false, filter: this.authorsFilter },
+                        { text: 'Title', value: 'title', width: 500, hidden: false, filter: this.titleFilter },
+                        { text: 'Publisher', value: 'publisher', hidden: false, filter: this.publisherFilter },
+                        { text: 'Journal', value: 'journal', hidden: false, filter: this.journalFilter },
+                        { text: 'Year', value: 'year', hidden: false, filter: this.yearFilter },
                         // CONFIRM: check column locations for type, status and flag
                         { text: 'Type', value: 'type', hidden: false, filter: this.typeFilter },
                         { text: 'Status', value: 'status', sortable: false, hidden: false, filter: this.statusFilter },
@@ -230,9 +312,93 @@
                 rawMaterialFilter(_, __, item) {
                     return this.keywordFilter(this.rawMaterialKeyword, item.rawMaterial)
                 },
+                nameFilter(_, __, item) {
+                    return this.keywordFilter(this.nameKeyword, item.name)
+                },
+                formulaFilter(_, __, item) {
+                    return this.keywordFilter(this.formulaKeyword, item.formula)
+                },
+                spaceGroupFilter(_, __, item) {
+                    return this.keywordFilter(this.spaceGroupKeyword, item.spaceGroup)
+                },
+                crystalStructureFilter(_, __, item) {
+                    return this.keywordFilter(this.crystalStructureKeyword, item.crystalStructure)
+                },
+                unitCellTypeFilter(_, __, item) {
+                    return this.keywordFilter(this.unitCellTypeKeyword, item.unitCellType)
+                },
+                dopingFilter(_, __, item) {
+                    return this.keywordFilter(this.dopingKeyword, item.doping)
+                },
+                shapeFilter(_, __, item) {
+                    return this.keywordFilter(this.shapeKeyword, item.shape)
+                },
+                variablesFilter(_, __, item) {
+                    return this.keywordFilter(this.variablesKeyword, item.variables)
+                },
+                materialClassFilter(_, __, item) {
+                    return this.keywordFilter(this.materialClassKeyword, item.materialClass)
+                },
+                fabricationFilter(_, __, item) {
+                    return this.keywordFilter(this.fabricationKeyword, item.fabrication)
+                },
+                substrateFilter(_, __, item) {
+                    return this.keywordFilter(this.substrateKeyword, item.substrate)
+                },
+                criticalTemperatureFilter(_, __, item) {
+                    return this.keywordFilter(this.criticalTemperatureKeyword, item.criticalTemperature)
+                },
+                appliedPressureFilter(_, __, item) {
+                    return this.keywordFilter(this.appliedPressureKeyword, item.appliedPressure)
+                },
+                criticalTemperatureMeasurementMethodFilter(_, __, item) {
+                    return this.keywordFilter(this.criticalTemperatureMeasurementMethodKeyword, item.criticalTemperatureMeasurementMethod)
+                },
+                linkTypeFilter(_, __, item) {
+                    return this.keywordFilter(this.linkTypeKeyword, item.linkType)
+                },
+                sectionFilter(_, __, item) {
+                    return this.keywordFilter(this.sectionKeyword, item.section)
+                },
+                subsectionFilter(_, __, item) {
+                    return this.keywordFilter(this.subsectionKeyword, item.subsection)
+                },
+                pathFilter(_, __, item) {
+                    return this.keywordFilter(this.pathKeyword, item.path)
+                },
+                filenameFilter(_, __, item) {
+                    return this.keywordFilter(this.filenameKeyword, item.filename)
+                },
+                hashFilter(_, __, item) {
+                    return this.keywordFilter(this.hashKeyword, item.hash)
+                },
+                timestampFilter(_, __, item) {
+                    return this.keywordFilter(this.timestampKeyword, item.timestamp)
+                },
+                doiFilter(_, __, item) {
+                    return this.keywordFilter(this.doiKeyword, item.doi)
+                },
+                authorsFilter(_, __, item) {
+                    return this.keywordFilter(this.authorsKeyword, item.authors)
+                },
+                titleFilter(_, __, item) {
+                    return this.keywordFilter(this.titleKeyword, item.title)
+                },
+                publisherFilter(_, __, item) {
+                    return this.keywordFilter(this.publisherKeyword, item.publisher)
+                },
+                journalFilter(_, __, item) {
+                    return this.keywordFilter(this.journalKeyword, item.journal)
+                },
+                yearFilter(_, __, item) {
+                    return this.keywordFilter(this.yearKeyword, item.year)
+                },
                 keywordFilter(keyword, target) {
-                    if (keyword === '') {
+                    if (keyword === null || keyword === '') {
                         return true
+                    }
+                    if (target === null || target === '') {
+                        return false
                     }
                     return target.indexOf(keyword) > -1
                 },
